test/negative/tuple_elem_type.mut
# ERROR: return tuple with wrong element type
def get_pair() -> (i64, str)
    return (42, 100)
end
